dev/wiki/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: dev-wiki
  annotations:
    linkerd.io/inject: enabled
  name: dev-wiki
