dev/wiki/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wiki
  namespace: dev
spec:
  ports:
    - protocol: TCP
      port: 80
      name: http
  selector: 
    app: wiki
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: wiki-deployment
  namespace: dev
spec:
  replicas: 1
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: wiki
        version: v1
    spec:
      containers:
      - name: wiki
        image: phanoix/gcpedia:latest
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /Main_Page
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 3
          timeoutSeconds: 1
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /Main_Page
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 3
          timeoutSeconds: 3
          failureThreshold: 3
        resources:
          requests:
            memory: "64Mi"
            cpu: "0.1"
          limits:
            memory: "1Gi"
            cpu: "1"
        volumeMounts:
        - mountPath: /var/www/html/docker_gcpedia/images
          name: wiki-data-volume
        - mountPath: /var/www/html/docker_gcpedia/LocalSettings.php
          subPath: LocalSettings.php
          name: wiki-settings
      - name: parsoid
        image: phanoix/parsoid:local
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "64Mi"
            cpu: "0.1"
          limits:
            memory: "1Gi"
            cpu: "0.2"
      volumes:
      - name: wiki-data-volume
        persistentVolumeClaim:
          claimName: dev-wiki-data-volume-claim
      - name: wiki-settings
        configMap:
          name: wiki-config
---
apiVersion: v1
kind: Service
metadata:
  name: wiki-pdf
  namespace: dev
spec:
  clusterIP: None
  ports:
    - protocol: TCP
      port: 3000
      name: wiki-pdf
  selector: 
    app: wiki-pdf
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: wiki-pdf-deployment
  namespace: dev
spec:
  replicas: 1
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: wiki-pdf
        version: v1
    spec:
      containers:
      - name: render
        image: msokk/electron-render-service:1.0.0
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 3
          timeoutSeconds: 1
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 3
          timeoutSeconds: 3
          failureThreshold: 3
        resources:
          requests:
            memory: "64Mi"
            cpu: "0.1"
          limits:
            memory: "512Mi"
            cpu: "0.5"
---
apiVersion: v1
kind: Service
metadata:
  name: wiki-db
  namespace: dev
spec:
  clusterIP: None
  ports: 
    - protocol: TCP
      port: 3306
      name: mysql
  selector:
    app: wiki-db
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: wiki-db-deployment
  namespace: dev
spec:
  replicas: 1 # tells deployment to run 1 pod matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: wiki-db
        version: v10
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.3
        ports:
        - containerPort: 3306
        resources:
          requests:
            memory: "2Gi"
            cpu: "0.5"
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: wiki-db-volume
      volumes:
      - name: wiki-db-volume
        persistentVolumeClaim:
          claimName: dev-wiki-db-volume
