dev/wiki/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wiki-ingress
  namespace: dev-wiki
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/server-snippet: |
      add_header X-Frame-Options SAMEORIGIN;
spec:
  tls:
  - hosts:
    - dev.wiki.gccollab.ca
    secretName: wiki-dev-tls-secret
  rules:
  - host: dev.wiki.gccollab.ca
    http:
      paths:
      - path: /
        backend:
          serviceName: wiki
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pdf-ingress
  namespace: dev-wiki
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - dev.pdf.gccollab.ca
    secretName: pdf-dev-tls-secret
  rules:
  - host: dev.pdf.gccollab.ca
    http:
      paths:
      - path: /
        backend:
          serviceName: wiki-pdf
          servicePort: 3000
